When BString assignment operator is called with a NULL argument we should use an empty string instead. I checked this against Dano. This fixed #4713

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@34983 a95241bf-73f2-0310-859d-f6bbb57e9c96